[package]
name = "with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "with_rust"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
regex = "1.10"
itertools = "0.12"
rug = "1.24"
num = "0.4"
